# tpr

./: .gitignore  CMakeLists.txt  bench.sh  build.sh  run.sh  run_locally.sh  vcluster_hosts
broadcast/: CMakeLists.txt  build.sh  main.c  run_locally.sh
openMP/: TestOpenMP.cpp
openmp/: archive_outputs.sh  benchmark.sh  blueeyedhushsort.o71802837  local.gp  local.sh  main.cpp  main.gp  plot_zeus_results.gp  run_preprocessor.sh  sync_with_zeus.sh  wait_and_email.sh  yoga2_1p.out  yoga2_4p.out  zeus.sh  zeus_2.gp  zeus_2.sh  zeus_alina.out  zeus_alina_2.out  zeus_runner.sh
perf_meas/: CMakeLists.txt  bench_vcluster.sh  bench_zeus.sh  build.sh  main.c  run_locally.sh  run_pbs.sh  run_vcluster.sh
pi/: launch_pi.sh  main.c
reduce/: main.c  reduce.c
